intento de responsive

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
     <footer>
 
-        <p>Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los derechos reservados.
+        <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los derechos reservados.
         </p>
 
     </footer>
