--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <header class="flexbox-space-around texto borde fixed-top">
 
         <!--  <a href=""> <img src="./imgs/argentinabrasil.png" alt=""> </a>  NO LO PUDE PONER A LA IZQUIERDA  -->
-        <img src="./imgs/logoarcana.jpeg" alt="Logo de Arcana" class="img-logo">
+        <a href="#"><img src="./imgs/logoarcana.jpeg" alt="Logo de Arcana" class="img-logo"></a>
 
         <nav>
             <ul class="list-navegacion flexbox-space-around">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Quienes somos</a></li>
             </ul>
 
         </nav>
