--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="list-navegacion flexbox-space-around">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="#">Quienes somos</a></li>
+                <li><a href="#">servicios</a></li>
             </ul>
 
         </nav>
