--- a/index.html
+++ b/index.html
@@ -23,65 +23,139 @@
 
         <nav>
             <ul class="list-navegacion flexbox-space-around">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="#">quienes somos</a></li>
+                <li><a href="#quienes-somos">quienes somos</a></li>
             </ul>
 
         </nav>
     </header>
-    <h1 class="arcana-h1"> Arcana Indumentaria</h1>
-    <section class="quienes-somos">
-
-        <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina">
-        <p class="bienvenida"> Te damos la bienvenida a "Arcana Indumentaria" Te ofrecemos artículos importados desde BR
-            Sao Paulo, a Buenos Aires, Argentina</p>
-        <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina">
-
-    </section>
+    <h1 class="arcana-h1" id="inicio"> Arcana Indumentaria</h1>
+   
     <section class="section-info">
-        
+
         <h2 class="indumentaria-h2">INDUMENTARIA</h2>
         <div class="seccion-info">
-            <img src="./imgs/conjuntotrespiezas.jpeg" alt="vestido de tres piezas" class="img-seccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
-            <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas.jpeg" alt="vestido de tres piezas" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+
+            </div>
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
         </div>
 
-        <h2 class="carteras-h2">CARTERAS</h2>
-        <div class="seccion-info">
-            <img src="./imgs/cartera1.jpeg" alt="carteras" class="img-seccion">
-            <p class="p-cartera1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem
-                eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
-            <img src="./imgs/cartera2.jpeg" alt="carteras" class="img-seccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
-        </div>
-
-        <h2>ZAPATOS</h2>
-        <div class="seccion-info">
-            <img src="./imgs/zapatosmarrones.jpeg" alt="zapatos marrones" class="img-seccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
-            <img src="./imgs/zapatosnegros.jpeg" alt="zapatos negros" class="img-seccion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
-                mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
-                uta reiciendis iste est deserunt?</p>
-        </div>
-        </div>
     </section>
+
+    <section class="section-info">
+
+        <h2 class="indumentaria-h2">CARTERAS</h2>
+        <div class="seccion-info">
+            <div class="container-img">
+                <img src="./imgs/cartera1.jpeg" alt="5 carteras de distintos colores" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+
+            </div>
+            <div class="container-img">
+                <img src="./imgs/cartera2.jpeg" alt="cartera color rosa" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section-info">
+
+        <h2 class="indumentaria-h2">ZAPATOS</h2>
+        <div class="seccion-info">
+            <div class="container-img">
+                <img src="./imgs/zapatosnegros.jpeg" alt="zapatos negros" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+
+            </div>
+            <div class="container-img">
+                <img src="./imgs/zapatosmarrones.jpeg" alt="zapatos marrones" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+
+            <div class="container-img">
+                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
+                    mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
+                    uta reiciendis iste est deserunt?</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="quienes-somos">
+
+       <!--  <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
+      <div class="conteiner-quienes-somos">
+       <h2 class="h2-quienes-somos" id="quienes-somos">QUIENES SOMOS</h2>
+        <p> Arcana indumentaria se crea a partir de mi búsqueda en el mercado de prendas entalladas
+             y con buena calidad de telas. Las encontré en un viaje de vacaciones por Brasil y desde ese momento me enamoré 
+             de cada una. Supe que ustedes también se volverían locas con cada una de ellas. Y como no alcanzaba solo indumentaria 
+             también decidí incorporar zapatos y carteras. Para estar vestidas de pies a cabeza y con accesorios, así es como nació 
+             <span class="arcana"> Arcana Indumentaria. </span></p>
+        <!-- <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
+    </div>     
+    </section>
+
+ 
     <footer>
 
-        <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los derechos reservados.
+        <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los
+            derechos reservados.
         </p>
 
     </footer>
