--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+   
 </head>
 
 <body>
@@ -24,14 +26,14 @@
         <nav>
             <ul class="list-navegacion flexbox-space-around">
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#quienes-somos">quienes somos</a></li>
             </ul>
 
         </nav>
     </header>
     <h1 class="arcana-h1" id="inicio"> Arcana Indumentaria</h1>
-   
+
     <section class="section-info">
 
         <h2 class="indumentaria-h2">INDUMENTARIA</h2>
@@ -51,14 +53,14 @@
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/bestido otoño.jpg" alt="vestido blanco con rayas otoño, suplex-Poliester" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/bestido marron.jpg" alt="vestido marrón otoño, suplex-Poliester" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
@@ -86,14 +88,14 @@
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/4 carteras de distintos colores.jpg" alt="4 carteras de distintos colores" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/6 carteras de distintos colores.jpg" alt="6 carteras de distintos colores" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
@@ -121,14 +123,14 @@
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/zapados negros y marrones.jpg" alt="zapatos negros y marrones" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
             </div>
 
             <div class="container-img">
-                <img src="./imgs/conjuntotrespiezas2.jpeg" alt="vestido de tres piezas corto" class="img-seccion">
+                <img src="./imgs/zapatos negros con peluchito.jpg" alt="zapatos negros con peluche adentro" class="img-seccion">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore voluptatem eaque aliquam,
                     mollitia, ipsa minima ullam itaque quis voluptate sint. Perferendis rerum aspernatur blanditiis sol
                     uta reiciendis iste est deserunt?</p>
@@ -137,26 +139,46 @@
 
     </section>
 
-    <section class="quienes-somos">
+    <section class="quienes-somos" id="quienes-somos">
 
-       <!--  <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
-      <div class="conteiner-quienes-somos">
-       <h2 class="h2-quienes-somos" id="quienes-somos">QUIENES SOMOS</h2>
-        <p> Arcana indumentaria se crea a partir de mi búsqueda en el mercado de prendas entalladas
-             y con buena calidad de telas. Las encontré en un viaje de vacaciones por Brasil y desde ese momento me enamoré 
-             de cada una. Supe que ustedes también se volverían locas con cada una de ellas. Y como no alcanzaba solo indumentaria 
-             también decidí incorporar zapatos y carteras. Para estar vestidas de pies a cabeza y con accesorios, así es como nació 
-             <span class="arcana"> Arcana Indumentaria. </span></p>
-        <!-- <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
-    </div>     
+        <!--  <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
+        <div class="conteiner-quienes-somos">
+            <h2 class="h2-quienes-somos">QUIENES SOMOS</h2>
+            <p> Arcana indumentaria se crea a partir de mi búsqueda en el mercado de prendas entalladas
+                y con buena calidad de telas. Las encontré en un viaje de vacaciones por Brasil y desde ese momento me
+                enamoré
+                de cada una. Supe que ustedes también se volverían locas con cada una de ellas. Y como no alcanzaba solo
+                indumentaria
+                también decidí incorporar zapatos y carteras. Para estar vestidas de pies a cabeza y con accesorios, así
+                es como nació
+                <span class="arcana"> Arcana Indumentaria. </span>
+            </p>
+            <!-- <img src="./imgs/argentinabrasil.png" alt="bandera Brasil Argentina" class="img-brasil-argentina"> -->
+        </div>
     </section>
 
- 
+
+
     <footer>
 
-        <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los
-            derechos reservados.
-        </p>
+        <section class="contacto" id="contacto">
+
+
+            <div class="container-contacto">
+                <h2 class="h2-contacto" id="contacto">CONTACTO</h2>
+                <ul class="redes-sociales">
+                    <li> <a href="#"> <img src="./imgs/iconoinstagram.svg.png" alt="incono de instagram"></a></li>
+                    <li> <a href="#"> <img src="./imgs/iconowhatsapp.png.crdownload" alt="incono de what´s app"></a></li>
+                    <li> <a href="#"> <img src="./imgs/iconofacebook.png" alt="incono de facebook"></a></li>
+                </ul>
+                
+            </div>
+        </section>
+        <div>
+            <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los
+                derechos reservados.
+            </p>
+        </div>
 
     </footer>
 </body>
