--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
         </div>
     </section>
 
-
+    <section class="map">
+        <h2>LOCALIZACIÓN DE ENTREGA</h2>
+        <div class="conteiner-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52575.77116248697!2d-58.77132466924137!3d-34.5539175099125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd7f8ed7ed6f%3A0xa141f13ddb761d51!2sSan%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1656327592555!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 
     <footer>
 
@@ -168,12 +173,13 @@
                 <h2 class="h2-contacto" id="contacto">CONTACTO</h2>
                 <ul class="redes-sociales">
                     <li> <a href="#"> <img src="./imgs/iconoinstagram.svg.png" alt="incono de instagram"></a></li>
-                    <li> <a href="#"> <img src="./imgs/iconowhatsapp.png.crdownload" alt="incono de what´s app"></a></li>
+                    <li> <a href="#"> <img src="./imgs/icono de what´s app2.png" alt="incono de what´s app"></a></li>
                     <li> <a href="#"> <img src="./imgs/iconofacebook.png" alt="incono de facebook"></a></li>
                 </ul>
                 
             </div>
         </section>
+
         <div>
             <p class="p-footer">Copyright Ⓒ 2022 <span class="arcana-footer">Arcana</span> marca registrada todos los
                 derechos reservados.
